objects/TW1_Fraldario__c.object
<CustomObject>

    
    <fields>
        <fullName>TW1_Data__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Dependente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependente</label>
        
        <referenceTo>TW1_Dependente__c</referenceTo>
        <relationshipLabel>Fraldário</relationshipLabel>
        <relationshipName>Frald_rio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Itens__c</fullName>
        <label>Itens</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimentação</fullName>
                </value>
                <value>
                    <fullName>Amamentação</fullName>
                </value>
                <value>
                    <fullName>Banheiro Infantil</fullName>
                </value>
                <value>
                    <fullName>Bebedouro/Lavar as Mãos</fullName>
                </value>
                <value>
                    <fullName>Ducha</fullName>
                </value>
                <value>
                    <fullName>Fralda</fullName>
                </value>
                <value>
                    <fullName>Microondas</fullName>
                </value>
                <value>
                    <fullName>Trocador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Fraldário</relationshipLabel>
        <relationshipName>Frald_rio</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fraldário</label>
    
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraldário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>